# voipnow_bill

./: .gitignore  .pre-commit-config.yaml  SECURITY.md  csvgen.py  pyproject.toml  tables.txt  tree.py
docs/: CONVENTIONS.md
e164bill/: did.py  main.py
sql/: carrier_did_handler.sql  client_did_handler.sql  reseller_did_handler.sql
voipnow/: backup.conf  requirements.txt  vnbackup  vnbackup.md
