[tool.poetry]
name = "e164bill"
version = "0.1.2"
description = "Python library for managing environmental dependencies across multiple programming languages and platforms"
authors = ["David Hooton <klingon_deps+david@hooton.org>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/djh00t/e164bill"
repository = "https://github.com/djh00t/e164bill"
keywords = ["dependencies", "language-detection", "klingon tools"]
classifiers = ["Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",]

[tool.poetry.dependencies]
python = "<4.0,>=3.9"
GitPython = ">=3.1.43"
PyYAML = ">=6.0.2"
tabulate = ">=0.9.0"

[tool.poetry.dev-dependencies]
pytest = ">=8.3.2"
pytest-mock = ">=3.14.0"
black = ">=24.8.0"
flake8 = ">=7.1.1"
pylint = ">=3.2.6"
yapf = ">=0.40.2"
mypy = ">=1.11.1"
pre-commit = ">=3.8.0"
pip-tools = ">=7.4.1"
twine = ">=5.1.1"
wheel = ">=0.44.0"
poetry = ">=1.8.3"
klingon_tools = ">=2.1.1"
jinja2 = ">=3.1.4"

[tool.poetry.scripts]
kdeps = "klingon_deps.cli:main"
e164bill = "klingon_deps.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = [ "py39", "py310", "py311", "py312"]
include = "\\.pyi?$"
exclude = "\\.eggs|\\.git|\\.hg|\\.mypy_cache|\\.tox|\\.venv|_build|buck-out|build|dist"

[tool.flake8]
max-line-length = 79
verbose = 3

[tool.pylint."MESSAGES CONTROL"]
disable = ["import-error"]

[tool.pylint.FORMAT]
max-line-length = 79

[tool.yapf]
based_on_style = "google"
column_limit = 79
dedent_closing_brackets = true
coalesce_brackets = true
spaces_before_comment = 4
split_before_logical_operator = true

[tool.yapfignore]
ignore_patterns = ["temp/**/*.py", "temp2/*.py"]

[tool.mypy]
exclude = "tmp/"

[tool.semantic_release]
version = "0.1.0"

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]
minversion = "8.3.1"
